# reversible-random-number-generators

./: CMakeLists.txt  README.md  reverse.hpp
examples/: CMakeLists.txt  benchmark.cpp  exponential.py  hash.h  hash.hpp  normal.py  polar.h  polar.hpp  reverse.py
python/: benchmark.py  exponential.py  normal.py  requirements.txt  reverse.py  reverse_test.py
src/: CMakeLists.txt  exponential.cpp  exponential.h  mersenne.cpp  mersenne.h  normal.h  pcg.cpp  pcg.h  reverse.h  uniform.cpp  uniform.h  wrapper.cpp  wrapper.h  xoshiro.cpp  xoshiro.h
tests/: CMakeLists.txt  battery.cpp  battery.h  reverse_test.cpp
